<resources>
    <string name="app_name">Study App</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="login_title">Login</string>
    <string name="news_tab_title">News</string>
    <string name="coupon_tab_title">Coupon</string>
    <string name="product_tab_title">Product</string>

    <string name="used_coupon_menu_title">Used Coupon</string>
    <string name="privacy_policy_menu_title">Privacy Policy</string>
    <string name="licenses_menu_title">Licenses</string>
    <string name="login_menu_title">Login</string>
    <string name="logout_menu_title">Logout</string>
    <string name="refresh_coupon_menu_title">Refresh Used Coupon</string>

    <!-- view content -->
    <string name="login_id_caption">Login Id</string>
    <string name="password_caption">Password</string>
    <string name="use_coupon_flick_caption">↑上へフリック↑</string>

    <!-- button text -->
    <string name="cancel_button_text">キャンセル</string>
    <string name="login_button_text">Login</string>
</resources>
